Corrected bug on mobile phone

--- a/src/components/VideoAsciiPanel.scss
+++ b/src/components/VideoAsciiPanel.scss
@@ -14,7 +14,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 90vh;
+  height: 90%;
 }
 
 .video-ascii-controller-holder {
